# template

./: .gitignore  Cargo.toml  README.md  deny.toml  diff.txt
.config/: .env.json  env.sh  header.txt  mise.ci.toml  mise.ssh.toml  mise.toml  nextest.toml
.config/scripts/: listen.py  pyproject.toml  update_parent_module.py
.config/scripts/listen/: listen.py
.config/scripts/new_mod/: main.py  util.py
.config/templates/screen/: cargo-generate.toml  data.rs.liquid  mod.rs.liquid  screen.rs.liquid  state.rs.liquid  systems.rs.liquid
.config/templates/service/: bundle.rs.liquid  cargo-generate.toml  data.rs.liquid  events.rs.liquid  mod.rs.liquid  systems.rs.liquid
.github/workflows/: ci.yaml
.zed/: debug.json  settings.json
assets/models/: basil.glb
crates/tfw/: Cargo.toml  README.md
crates/tfw/src/: lib.rs
crates/tfw/src/screen/: data.rs  mod.rs  scope.rs  trait_impl.rs
crates/tfw/src/test_impl/: mod.rs  util.rs
crates/tfw/src/test_impl/screen/: data.rs  mod.rs
crates/tfw/src/test_impl/screen/empty/: screen.rs  state.rs
crates/tfw/src/test_impl/screen/named_entity/: screen.rs
crates/tfw/src/test_impl/screen/scoped_system/: mod.rs  screen.rs  state.rs
crates/tfw/src/test_impl/service/scoped_system/: data.rs  mod.rs  systems.rs
crates/tfw/src/test_impl/tests/: screens.rs
crates/tfw/src/tests/: mod.rs  util.rs
crates/tfw/src/tests/screen/empty/: screen.rs  state.rs
crates/tfw/src/tests/tests/: mod.rs  screens.rs
crates/tfw/tests/: screens.rs  tests.rs
crates/tfw/tests/app/: mod.rs
crates/tfw/tests/app/screen/: data.rs  mod.rs
crates/tfw/tests/app/screen/blocking_scoped_system/: mod.rs  screen.rs
crates/tfw/tests/app/screen/empty/: mod.rs  screen.rs
crates/tfw/tests/app/screen/lifecycle/: mod.rs  screen.rs
crates/tfw/tests/app/screen/named_entity/: mod.rs  screen.rs
crates/tfw/tests/app/screen/scoped_system/: mod.rs  screen.rs
crates/tfw/tests/app/service/: mod.rs
crates/tfw/tests/app/service/scoped_system/: systems.rs
crates/tfw/tests/app/util/: app_ext.rs  commands_ext.rs  data.rs  fns.rs  mod.rs  runner.rs
crates/tfw/tests/screen/: entity_scoping.rs  mod.rs  scoping.rs  system_scoping.rs
docs/: ARCHITECTURE.md  EVENTS_SYSTEMS_AND_SCOPES.md  EVENTS_vs_SYSTEMS.md
examples/: cameras.rs  tracking.rs
src/: clap.rs  data.rs  dev.rs  lib.rs  main.rs  plugin.rs  third_party.rs
src/dev/: actions.rs  gizmos.rs  mod.rs
src/dev/inspectors/: mod.rs
src/dev/minibuffer/: fly_cam.rs  mod.rs
src/dev/minibuffer/actions/: in_world.rs  mod.rs
src/dev/minibuffer/inspectors/: mod.rs  perf.rs  world.rs
src/docs/: architecture.md  cli.md  events_systems_scopes.md  mod.rs
src/framework/: data.rs  events.rs  mod.rs  screen.rs
src/framework/data/: mod.rs  propogate.rs  sysparams.rs
src/framework/screen/: data.rs  doc.md  events.rs  mod.rs  scope.rs  trait_impl.rs
src/framework/tests/: mod.rs  runner.rs  screens.rs  util.rs
src/framework/util/: mod.rs  propogate.rs  sysparams.rs
src/screen/: data.rs  mod.rs
src/screen/dev/: mod.rs
src/screen/dev/camera_test/: mod.rs  screen.rs  state.rs  systems.rs
src/screen/dev/test/: mod.rs  state.rs  systems.rs
src/screen/splash/: mod.rs  state.rs  systems.rs
src/screen/test/: mod.rs  screen.rs
src/screen/test/empty/: mod.rs  screen.rs
src/screen/test/named_entity/: mod.rs  screen.rs  state.rs
src/screen/world/: data.rs  mod.rs  state.rs  systems.rs
src/screens/: data.rs  loading.rs  mod.rs  splash.rs  world.rs
src/service/: mod.rs  third_party.rs
src/service/dev/: mod.rs  third_party.rs
src/service/dev/camera_test/: mod.rs  systems.rs
src/service/dev/console/: mod.rs
src/service/dev/console/commands/: mod.rs  set_cam.rs
src/service/dev/gizmos/: mod.rs
src/service/dev/minibuffer/: mod.rs
src/service/dev/minibuffer/actions/: mod.rs
src/service/dev/minibuffer/actions/in_world/: mod.rs  systems.rs
src/service/dev/minibuffer/inspectors/: mod.rs
src/service/dev/minibuffer/inspectors/world/: mod.rs
src/service/dev/test/: data.rs  events.rs  mod.rs
src/service/input/: data.rs  events.rs  mod.rs
src/service/input/camera/: mod.rs
src/service/input/camera/controller/: data.rs  events.rs  mod.rs
src/service/input/camera/data/: mod.rs
src/service/input/camera/fly/: bundle.rs  data.rs  mod.rs
src/service/input/camera/tracking/: bundle.rs  data.rs  mod.rs  systems.rs
src/service/input/cursor/: events.rs  mod.rs  systems.rs
src/service/player/: data.rs  events.rs  mod.rs  systems.rs
src/service/text/: mod.rs
src/service/ui/: mod.rs
src/service/worldgen/: mod.rs
src/services/: data.rs  mod.rs  third_party.rs
src/services/dev/: gizmos.rs  mod.rs
src/services/dev/gizmos/: mod.rs
src/services/dev/minibuffer/: mod.rs
src/services/dev/minibuffer/actions/: in_world.rs  mod.rs
src/services/dev/minibuffer/actions/in_world/: systems.rs
src/services/dev/minibuffer/inspectors/: mod.rs
src/services/dev/minibuffer/inspectors/world/: data.rs  systems.rs
src/services/input/: cursor.rs  data.rs  events.rs  mod.rs  systems.rs
src/services/input/camera/: controller.rs  data.rs  fly.rs  mod.rs  tracking.rs
src/services/input/camera/controller/: events.rs
src/services/input/camera/data/: input_ctx.rs
src/services/input/camera/fly/: events.rs
src/services/input/camera/tracking/: bundle.rs  data.rs  events.rs
src/services/input/cursor/: data.rs  events.rs  mod.rs
src/services/player/: assets.rs  camera.rs  controller.rs  data.rs  events.rs  mod.rs  systems.rs
src/services/text/: mod.rs
src/services/ui/: mod.rs
src/services/worldgen/: data.rs  mod.rs
