[package]
name = "app"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "./crates/*"]

[package.metadata.bevy_lint]
panicking_methods = { level = "warn" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[lints]
workspace = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dependencies]
# bevy
bevy = { version="0.17", features=["bevy_dev_tools"]}
bevy_enhanced_input = "0.19"
bevy_asset_loader = "0.24.0-rc.1"
bevy_mod_debugdump = { optional = true, version = "0.14" }
avian3d = "0.4"
bevy-tnua = "0.26"
bevy-tnua-avian3d = "0.7"
bevy_rich_text3d = "0.5"

# not bevy
tiny_bail = "0.7"
itertools = "0.14.0"
thiserror = "2.0.12"
bitflags = "2.9.3"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.50", features = ["derive"], optional = true }
variadics_please = "1.1.0"

# workspace
tfw = {path = "./crates/tfw"}

[build-dependencies]
built = {version = "0.8.0", features=["chrono"]}

[features]
dev = [
    "dep:bevy_mod_debugdump",
    "dep:clap",
]
dylib = ["bevy/dynamic_linking"]
