[package]
name = "tfw"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy
bevy = { version="0.17", features=["bevy_dev_tools"]}

# not bevy
tiny_bail = "0.7"
itertools = "0.14.0"
thiserror = "2.0.12"
bitflags = "2.9.3"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
strum = { version = "0.27.2", features = ["derive"] }
variadics_please = "1.1.0"
bevy_asset_loader = "0.24.0-rc.1"

[dev-dependencies]
# just for a few inspector things... should really fork them
bevy-inspector-egui = "0.35"

[lints]
workspace = true
